--- a/openomd_test/openomd_test.vcxproj
+++ b/openomd_test/openomd_test.vcxproj
@@ -105,7 +105,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;Ws2_32.lib;gmock-$(GmockVersion)d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;zlib-$(ZlibVersion).lib;Ws2_32.lib;gmock-$(GmockVersion)d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>target\nar\lib\x86-Windows-msvc\shared;target\test-nar\gmock-$(GmockVersion)-x86-Windows-msvc-static\lib\x86-Windows-msvc\static\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
@@ -126,8 +126,8 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;Ws2_32.lib;gmock-$(GmockVersion)d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>target\nar\lib\amd64-Windows-msvc\shared;target\test-nar\gmock-$(GmockVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;zlib-$(ZlibVersion).lib;Ws2_32.lib;gmock-$(GmockVersion)d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>target\nar\lib\amd64-Windows-msvc\shared;target\test-nar\gmock-$(GmockVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static\;target\test-nar\zlib-$(ZlibVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>$(TargetDir)$(TargetFileName)</Command>
@@ -151,7 +151,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;Ws2_32.lib;gmock-$(GmockVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;zlib-$(ZlibVersion).lib;Ws2_32.lib;gmock-$(GmockVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>target\nar\lib\x86-Windows-msvc\shared;target\test-nar\gmock-$(GmockVersion)-x86-Windows-msvc-static\lib\x86-Windows-msvc\static\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
@@ -176,8 +176,8 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;Ws2_32.lib;gmock-$(GmockVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>target\nar\lib\amd64-Windows-msvc\shared;target\test-nar\gmock-$(GmockVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>wpcap-$(WpcapVersion).lib;zlib-$(ZlibVersion).lib;Ws2_32.lib;gmock-$(GmockVersion).lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>target\nar\lib\amd64-Windows-msvc\shared;target\test-nar\gmock-$(GmockVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static\;target\test-nar\zlib-$(ZlibVersion)-amd64-Windows-msvc-static\lib\amd64-Windows-msvc\static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>$(TargetDir)$(TargetFileName)</Command>
