--- a/openomd_tools/pom.xml
+++ b/openomd_tools/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>io.github.openvega</groupId>
     <artifactId>openomd</artifactId>
-    <version>1.0.9</version>
+    <version>1.1.0</version>
   </parent>
 
   <artifactId>openomd_tools</artifactId>
@@ -48,6 +48,11 @@
       <artifactId>openomd_handler</artifactId>
       <type>nar</type>
       <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.github.openvega</groupId>
+      <artifactId>zlib</artifactId>
+      <type>nar</type>
     </dependency>
   </dependencies>
 </project>
